# src/main/java/com/hairtransplant/project/entities/HairLoss.java
@@ -1,6 +1,6 @@
 package com.hairtransplant.project.entities;
 
-import java.time.LocalDate;
+import com.fasterxml.jackson.annotation.JsonIgnore;
 
 import jakarta.persistence.Column;
 import jakarta.persistence.Entity;
@@ -11,6 +11,7 @@ import jakarta.persistence.Id;
 import jakarta.persistence.JoinColumn;
 import jakarta.persistence.ManyToOne;
 import jakarta.persistence.Table;
+import jakarta.persistence.Transient;
 
 @Entity
 @Table(name = "hair_loss")
@@ -20,7 +21,8 @@ public class HairLoss {
 	@GeneratedValue(strategy = GenerationType.IDENTITY)
 	@Column(name = "id")
 	private Long id;
-
+	
+	@JsonIgnore
 	@ManyToOne(fetch = FetchType.LAZY)
 	@JoinColumn(name = "personal_information_id")
 	private PersonalInformation personalInformation;
@@ -36,7 +38,10 @@ public class HairLoss {
 
 	@Column(name = "date_dataEntry")
 	private String dateDataEntry;
-
+	
+	@Transient
+	private String parent;
+	
 	public HairLoss() {
 	}
 
@@ -98,6 +103,17 @@ public class HairLoss {
 	public void setDateDataEntry(String dateDataEntry) {
 		this.dateDataEntry = dateDataEntry;
 	}
+	
+	public String getIdParent() {
+		return personalInformation.getId().toString();
+	}
+	
+	public String getStringParent() {
+		return parent;
+	}
 
+	public void setParent(String parent) {
+		this.parent = parent;
+	}
 	// Constructor, getters and setters
 }
